0.1.0: September 3, 2013
* Bugfix: chunk count calculation was ignoring the header-overhead.
* All log operations now use a single udp socket.
* To be more friendly to lower MTUs, lowered the default buffer size to 1400 bytes.
* Added destroy() function that closes the UDP socket.
* Removed async requirement.
* Removed some unused variables.
* Removed the larger test files (256 and 512KB) because they don't fit the new default buffer limit.
* Removed unused test data.

0.0.12: March 12, 2012
* Dummy version bump in order to push to npm

0.0.11: March 12, 2012
* Removed dependency on node-compress-buffer
* Code cleanup
* Contributors mentioned

0.0.10: November 6, 2011
* Support node 0.6.0+

0.0.9: September 19, 2011
* Work around node 0.5.x crashes
* Added 0.5.x notes
* Added an important requirement of compress-buffer >= 0.4.0
* Added sayHello.js

0.0.8: July 12, 2011
* Minor console log output issue

0.0.7: June 23, 2011
* So much better console output

0.0.6: June 23, 2011
* GLOBAL.graylogSequence

0.0.5: May 14, 2011
* GLOBAL.graylogFacility
* Limit message size to 8k
* Misc typo fixes

0.0.2, 0.0.3, 0.0.4: May 12, 2011
* Exceptions in case the graylog2 is not running
* GLOBAL.graylogToConsole added
* CHANGELOG added
* Bugfixes

0.0.1: May 11, 2011
* initial release