@@ -40,7 +40,7 @@ for (var i = 4; i <= 128; i *= 2) {
 }
 console.log('');
 
-console.log('Insertion complete. Please check', 'http://'+servers[0].host+':3000', 'and verify that insertion was successfull');
+console.log('Insertion complete. Please check', 'http://' + servers[0].host + ':3000', 'and verify that insertion was successfull');
 console.log('');
 
 setTimeout(function () {
