@@ -1,4 +1,6 @@
 0.1.0: September 3, 2013
+* Replaced all console.error calls with emit('error').
+  *Warning*: you really must listen for these or node will throw uncatchable exceptions!
 * Bugfix: chunk count calculation was ignoring the header-overhead.
 * All log operations now use a single udp socket.
 * To be more friendly to lower MTUs, lowered the default buffer size to 1400 bytes.
